...
                        }
                    }
                }
                FloatingActionButton(
                    modifier = Modifier
                        .size(80.dp)
                        .semantics { contentDescription = "Add Movement" },
                    onClick = { movementToEdit = Movement("") },
                ) {
                    Icon(Filled.Add, "Floating action button.")
                }

                movementToEdit?.let { movement ->
...
                            HapticFeedbackConstants.LONG_PRESS,
                            HapticFeedbackConstants.FLAG_IGNORE_GLOBAL_SETTING
                        )
                        movementDropDownMenuInfo = movement
                    },
                )
                .semantics { contentDescription = "Movement Card" },
        ) {
            Row(
                modifier = Modifier
                    .fillMaxSize()
                    .padding(8.dp),
                horizontalArrangement = Arrangement.SpaceBetween
...
        dismissButton = {
            TextButton(
                onClick = {
                    onDismissRequest()
                }
            ) {
                Text("Dismiss")
            }
        }
    )
}

@Composable
...

    Dialog(onDismissRequest = { onDismissRequest() }) {
        val focusRequester = remember { FocusRequester() }
        Card(
            modifier = Modifier
                .fillMaxWidth()
                .semantics { contentDescription = if (isAdd) "Add Movement Dialog" else "Edit Movement Dialog" },
            shape = RoundedCornerShape(16.dp),
        ) {
            Column(
                modifier = Modifier
                    .padding(start = 8.dp, top = 8.dp, end = 8.dp),
            ) {
                TextField(
                    value = movementNameText,
                    onValueChange = { movementNameText = it },
                    label = { Text("Name of exercise") },
                    modifier = Modifier.focusRequester(focusRequester),
                )
                Spacer(modifier = Modifier.size(16.dp))
                TextField(
                    value = movementWeightText,
                    onValueChange = { movementWeightText = it },
...
                    TextButton(
                        onClick = {
                            onConfirmation(Movement(movementNameText, movementWeightText.toIntOrNull()))
                        },
                        enabled = movementNameText.isNotBlank()
                    ) {
                        Text(if (isAdd) "Add" else "Edit")
                    }
                }
            }
        }
        LaunchedEffect(Unit) {
            focusRequester.requestFocus()
...
